5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1602_1016.log
== TEST (2019-03-27 15:43:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = (float(input("digite o lado A ")))
b = (float(input("digite o lado B ")))
c = (float(input("digite o lado C ")))
s = (a + b + c)/2
from math import *
Area = sqrt(s*(s-a)*(s-b)*(s-c)) 
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(area, 5))
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:43:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = (float(input("digite o lado A ")))
b = (float(input("digite o lado B ")))
c = (float(input("digite o lado C ")))
s = (a + b + c)/2
from math import *
Area = sqrt(s*(s-a)*(s-b)*(s-c)) 
print(round(area, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(area, 5))
NameError: name 'area' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 15:44:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = (float(input("digite o lado A ")))
b = (float(input("digite o lado B ")))
c = (float(input("digite o lado C ")))
s = (a + b + c)/2
from math import *
Area = sqrt(s*(s-a)*(s-b)*(s-c)) 
print(round(Area, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 15:44:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = (float(input("digite o lado A ")))
b = (float(input("digite o lado B ")))
c = (float(input("digite o lado C ")))
s = (a + b + c)/2
from math import *
Area = sqrt(s*(s-a)*(s-b)*(s-c)) 
print(round(Area, 5))
-- EXECUTION TIME:
0.135441
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
